--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,24 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>hu.fenyvesvolgyimate.tollsystem</groupId>
+            <artifactId>TollSystemApp</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.fenyvesvolgyimate.tollsystem</groupId>
+            <artifactId>TollConsoleUI</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.fenyvesvolgyimate.tollsystem</groupId>
+            <artifactId>TollSystemPersistenceStorage</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
