--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,18 @@
             <artifactId>TollSystemPersistenceStorage</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>hu.fenyvesvolgyimate.vehicleregisterapp</groupId>
+            <artifactId>VehicleRegisterBusinessRules</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.fenyvesvolgyimate.vehicleregisterapp</groupId>
+            <artifactId>VehicleRegisterStorage</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
